Modal resize overflow fix, cart page optimization

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1657,6 +1657,7 @@ ul, ol{
     overflow-x: hidden;
     opacity: 0;
     visibility: hidden;
+    background-color: rgba(0,0,0,.8);
     transition: opacity .4s,visibility .4s;
 }
 .modal.open {
@@ -1668,8 +1669,7 @@ ul, ol{
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
-    background-color: rgba(0,0,0,.8);
+    height: 100%;    
 }
 .modal .modal_box {
     position: absolute;
@@ -1694,8 +1694,7 @@ ul, ol{
 .modal .modal_body {
 	display: inline-block;
 	vertical-align: middle;
-	font-size: 13px;
-	background-color: #fff;
+	font-size: 13px;	
 }
 .ajax_loader_wrap {
     margin-top: 10px;
@@ -1719,6 +1718,7 @@ ul, ol{
 	text-align: center;
 	position: relative;
 	padding-bottom: 30px;
+    margin: 20px 0;
 }
 .modal .form .form_title {
 	font-size: 30px;
